# nft-blender

./: .buildinfo  .gitignore  AUTHORS.md  LICENSE.txt  Pipfile  README.md  autodoc.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs_pages_workflow.yml
_sources/: index.rst.txt  overview.rst.txt
docs/: autodoc.rst  buildDocs.sh  conf.py  index.rst  overview.rst
scripts/: install.py  mas_blender_addon.py  mas_blender_install.py  nft_blender_addon.py  nft_blender_install.py  nft_blender_menu_add_on.py
src/mas_blender/: __init__.py
src/mas_blender/mas_bpy/: __init__.py  bpy_ani.py  bpy_mdl.py  bpy_mtl.config.json  bpy_mtl.py  bpy_node.py
src/mas_blender/mas_bpy/_bpy_core/: bpy_ctx.py  bpy_io.py  bpy_obj.py  bpy_scn.py
src/mas_blender/mas_db/: __init__.py  db_sql.py
src/mas_blender/mas_ops/: __init__.py  _sandbox.py  mirror_pose.py  mirror_xforms.py  ops_asst copy.py  ops_asst.py  ops_io.py  ops_io_vrm.py  ops_proj.config.json  ops_proj.py  ops_rndr copy.py  ops_rndr.py  ops_v3d.config.json  ops_v3d.py  shape_driver.py  shape_reconnector.py  weight_serializer.py
src/mas_blender/mas_ops/ops_io_examples/: export_.config.json  export_.json
src/mas_blender/mas_py/: __init__.py  py_paths.py  py_util.py
src/mas_blender/mas_qt/: __init__.py  qt_os.py  qt_ui.py
src/mas_blender/mas_ue/: ue_io.py
src/nft_blender/: __init__.py
src/nft_blender/nft_bpy/: __init__.py  bpy_ani.py  bpy_ctx.py  bpy_io.py  bpy_mdl.py  bpy_mtl.py  bpy_node.py  bpy_scn.py  nft_anim.py  nft_io.py  nft_mtl.py  nft_scn.py  nft_ui.py  nft_user.py  nft_win.py
src/nft_blender/nft_bpy/_bpy_core/: bpy_io.py  bpy_obj.py  bpy_scn.py
src/nft_blender/nft_core/: core_util.py
src/nft_blender/nft_db/: __init__.py  db_sql.py  nft_sql.py
src/nft_blender/nft_ops/: __init__.py  ops_asst.py  ops_io.config.json  ops_io.py  ops_io_vrm.py  ops_proj.config.json  ops_proj.py  ops_rndr.py  ops_v3d.config.json  ops_v3d.py
src/nft_blender/nft_py/: __init__.py  py_paths.py  py_util.py
src/nft_blender/nft_qt/: __init__.py  qt_io_export_dialog.ui  qt_os.py  qt_proj_dialog.ui  qt_ui.py
src/nft_blender/operators/: __init__.py  nft_blender_proj.config.json  operator_asset.py  operator_proj.py  operator_rndr.py
src/nft_blender/ui/: ui_proj_dialog.ui
