#

[metadata]
name = nft-blender
description = Not really just for NFTs...Way more about Blender (Web3 support on the "roadmap ðŸ˜")
author = masangri.eth
author_email = masangri.art@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Masangri/nft-blender

#
project_urls =
    Documentation = https://pyscaffold.org/
    Source = https://github.com/Masangri/nft-blender
    Tracker = https://github.com/Masangri/nft-blender/issues
    Download = https://github.com/Masangri/nft-blender.git

# Developed in WSL2 (Linux) on Windows, but only used in Blender on Windows currently.
platforms = Windows

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
# Requires current version of Blender of higher.
python_requires = >=3.2

zip_safe = False
packages = find_namespace:
include_package_data = True

#
package_dir =
    =src

#
install_requires =
    importlib-metadata


[options.packages.find]
where = src
exclude =
    tests

testing =
    setuptools
    pytest
    pytest-cov


[options.entry_points]
#


[tool:pytest]
# 
addopts =
    --cov nft_blender --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .eggs
    build
    dist


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.2
package = nft_blender
extensions =
    markdown
    no_pyproject
    no_skeleton
    no_tox
