#

[metadata]
name = mas-blender
description = A growing set of tools for Blender that utilize the full scope of Python 3
author = [m a s]
author_email = mas@themasmedia.co
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/themasmedia
version = 0.0.1

#
project_urls =
    Source = https://github.com/themasmedia/mas-blender
    Tracker = https://github.com/themasmedia/mas-blender/issues
    Download = https://github.com/themasmedia/mas-blender.git

# Developed in WSL2 (Linux) on Windows, but only used in Blender on Windows currently.
platforms = Windows

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
# Requires current version of Blender of higher.
python_requires = >=3.10

zip_safe = False
packages = find_namespace:
include_package_data = True

#
package_dir =
    =src

#
install_requires =
    importlib-metadata
    PySide6
    SQLAlchemy


[options.packages.find]
where = src
exclude =
    tests

testing =
    pytest
    pytest-cov
    setuptools
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme


[options.package_data]
mas_blender =
    **/*.json
    **/*.ui


[options.entry_points]
#


[tool:pytest]
# 
addopts =
    --cov mas_blender --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
testpaths = tests


[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build
warning-is-error = 1


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .eggs
    build
    dist
    docs/conf.py


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.2
package = mas_blender
extensions =
    markdown
    no_pyproject
    no_skeleton
    no_tox
